# tangos-enigma2

./: README  autogen.sh  configure.ac  mytest.py  skin.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  startwizard.xml  unicable.xml
data/Neutrino-Like.HD/: Makefile.am  gChannelSelection.conf  gSensorFields.conf  skin.xml  themes.xml
data/Neutrino-Like.HD/images/: Makefile.am
data/Neutrino-Like.HD/images/mst/: Makefile.am
data/Neutrino-Like.HD/images/mst/dark/: Makefile.am
data/Neutrino-Like.HD/skin_default/: Makefile.am
data/Neutrino-Like.HD/skin_default/buttons/: Makefile.am
data/Neutrino-Like.HD/skin_default/icons/: Makefile.am
data/countries/: Makefile.am
data/rc_models/: Makefile.am  kathrein.xml  rc_models.cfg
lib/: Makefile.am
lib/base/: e2avahi.cpp  e2avahi.h  httpstream.cpp  smartptr.h
lib/driver/: Makefile.inc  rc_init.cpp  rc_init.h  rcinput.cpp  vfd.cpp
lib/dvb/: decoder.cpp  dvb.cpp  dvb.h  epgcache.cpp  filepush.cpp  frontend.cpp  pmt.cpp  streamserver.cpp  volume.cpp  volume.h
lib/dvb_ci/: dvbci.cpp  dvbci.h  dvbci_datetimemgr.cpp
lib/gdi/: fb.cpp  gfbdc.cpp  gpixmap.cpp
lib/libeplayer3/: Makefile.am  input.cpp
lib/libeplayer3/writer/: pcm.cpp
lib/python/: connections.h  enigma_python.i
lib/python/Components/: About.py  Harddisk.py  Language.py  MovieList.py  Network.py  NimManager.py  RcModel.py  SystemInfo.py  Timezones.py  UsageConfig.py  VolumeControl.py
lib/python/Components/Converter/: FrontendInfo.py  Makefile.am  PliExtraInfo.py  RemainingToText.py
lib/python/Screens/: ChannelSelection.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  MovieSelection.py  NetworkSetup.py  PluginBrowser.py  Standby.py  Wizard.py
lib/python/Tools/: Directories.py  ExtHardwareInfo.py  KeyBindings.py  Makefile.am  Profile.py
lib/service/: Makefile.inc  listboxservice.cpp  servicedvb.cpp  servicedvb.h  servicedvbrecord.cpp  serviceeplayer3.cpp  serviceeplayer3.h  servicemp3.cpp  servicemp3.h
m4/: ax_python_devel.m4
main/: Makefile.am  enigma.cpp
po/: Makefile.am
tools/: enigma2.sh.in
(+10 files in other folders)
