installdir = $(pkgdatadir)/countries

countries = \
	de.png \
	en.png \
	missing.png

countries_unmaintained = \
	ad.png \
	ae.png \
	bg.png \
	br.png \
	cn.png \
	cz.png \
	dk.png \
	es.png \
	ee.png \
	fi.png \
	fr.png \
	gr.png \
	hk.png \
	hr.png \
	hu.png \
	id.png \
	il.png \
	ir.png \
	is.png \
	it.png \
	ku.png \
	lt.png \
	lv.png \
	nl.png \
	no.png \
	pl.png \
	pt.png \
	ro.png \
	ru.png \
	se.png \
	si.png \
	sk.png \
	th.png \
	tr.png \
	ua.png \
	fy_NL.png \
	yu.png

dist_install_DATA = $(countries)
# dist_install_DATA += $(countries_unmaintained)
