SUBDIRS = mst

installdir = $(pkgdatadir)/Neutrino-Like.HD/images

dist_install_DATA = \
	amsbg.png \
	dvd.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	ico_crypt_off.png \
	ico_crypt_on.png \
	ico_dolby_off.png \
	ico_dolby_on.png \
	ico_format_off.png \
	ico_format_on.png \
	ico_hd_off.png \
	ico_hd_on.png \
	ico_txt_off.png \
	ico_txt_on.png \
	movieplayer.png \
	mute.png \
	no_coverArt.png \
	oben_links.png \
	oben.png \
	oben_rechts.png \
	radio.png \
	record.png \
	scrollbarbackground.png \
	scrollbarslider.png \
	selbg200x40.png \
	selbg400x40.png \
	selfg200x40.png \
	selfg400x40.png \
	snr_border.png \
	snr_progress.png \
	timeline-now.png \
	timeline.png \
	unten_links.png \
	unten.png \
	unten_rechts.png
